k8s/strategies/ab-testing/stable-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: aceest-fitness-a
  namespace: aceest
spec:
  selector:
    app: aceest-fitness
    variant: a
  ports:
    - port: 80
      targetPort: 5000
