k8s/strategies/ab-testing/ab-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: aceest-ab-ingress
  namespace: aceest
  annotations:
    nginx.ingress.kubernetes.io/canary: "true"
    nginx.ingress.kubernetes.io/canary-by-header: "X-Experiment"
    nginx.ingress.kubernetes.io/canary-by-header-value: "B"
spec:
  ingressClassName: nginx
  rules:
    - host: aceest.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: aceest-fitness-a
                port:
                  number: 80
